
version 2.1-beta3  xx-Oct-2012
. [NEW] RenderTexture: Supports "auto rendering" its children to the texture. No need to call being/end
. [FIX] Actions: TargetedAction can be copied. Calls super correctly
		Blink: "stop" restores original "visibility" state
. [FIX] Dispatcher: Queueing nested events works as expected (issue #1279, #1410)
. [FIX] Documentation: Fixes DrawingPrimitives doc (issue #1409)
. [FIX] GL Cache: when texture is deleted, it is removed form teh GL cache (issue #1429)
. [FIX] LabelAtlas: Honors the directory of the .plist file when loading the .png file
. [FIX] LabelBMFont: Does not crash if it can't parse the FNT. Instead it logs an error and return nil
. [FIX] LabelTTF: It is possible to set an empty string
. [FIX] Layer: API improvements
		setIsKeyboardEnabled -> setKeyboardEnabled
		setIsMouseEnabled -> setMouseEnabled
		setIsTouchEnabled -> setTouchEnabled
		setIsAccelerometerEnabled -> setAccelerometerEnabled
		New way to enable "targeted" touches: [self setTouchMode:kCCTouchOneByOne];
. [FIX] LayerColor: uses correct default blending function (issues #1422 #1423)
. [FIX] Particle: Honors the directory of the .plist file when loading the .png file
. [FIX] Templates: Autoration can be overriden in runtime on iOS 6
		Fixed some grammar errors
. [FIX] Tests: Watermelon With Me uses new Chipmunk API
		Add new JS tests for Chipmunk (Buoyancy, Pyramid, Joints, etc...)
. [FIX] Texture: Improved assert when updating filter on NPOT textures
. [FIX] TextureCache: filenames are standarized before adding them into the cache
. [FIX] Touch Delegate:
		CCTargetedTouchDelegate -> CCTouchOneByOneDelegate
		CCStandardTouchDelegate -> CCTouchAllAtOnceDelegate
. [FIX] Windows: Toggle fullscreen does not reset whether or not to support touches (issue #1420)
. [FIX] Xcode: Fixed compiler warnigns
. [3RD] JS Bindings: Updated to v0.3
		Chipmunk API is compatible with Chipmunk-JS
		CocosBuilder Reader supports "outlets", Animation callbacks, and improved JSB API